# driplet-tuya-esp

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/tuya/: CMakeLists.txt
components/tuya/port_esp/: ble_wrapper.c  network_wrapper.c  storage_wrapper.c  system_wrapper.c
main/: CMakeLists.txt  Kconfig.projbuild  config.c  main.c  tuya.c  wifi.c
main/include/: config.h  tuya.h  wifi.h
